# horse

./: .commitlintrc.json  AGENTS.md  Cargo.toml  PLAN.md  README.md  TODO.md
.github/workflows/: ci.yaml  commit-lint.yaml
src/: console.rs  hooks.rs  lib.rs  main.rs  spinner.rs  tools.rs
src/agent/: hooks.rs  tools.rs
src/agent/tools/: search_docs.rs
src/console/: colors.rs  markdown.rs  repl.rs  spinner.rs
src/tools/: bash.rs  read_file.rs  search_docs.rs
