[package]
name = "horse"
version = "0.1.0"
edition = "2024"

[dependencies]
rig = { package = "rig-core", version = "0.30.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
thiserror = "1"
termimad = { version = "0.32", default-features = false }
